src/test/ui/did_you_mean/issue-41679-tilde-bitwise-negation-attempt.rs
fn main() {
    let x = ~1; //~ ERROR cannot be used as a unary operator
}
